<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/selected_dot"
    android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/createprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <include
                    android:id="@+id/header"
                    layout="@layout/row_header"/>

                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/backarrow_creditcard"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/ic_chevron_left"/>
                    <TextView
                        android:id="@+id/txtDiscardReg4"
                        android:layout_width="0dp"
                        android:layout_weight="96"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"

                        android:text="Discard"
                        android:gravity="right"
                        android:textAllCaps="false"
                        android:textColor="@color/themebackgroundtext"
                        android:textSize="14dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"/>
                </LinearLayout>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="6dp"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/progress_rectangle_default" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="6dp"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/progress_rectangle_default" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="6dp"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/progress_rectangle_default" />
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="6dp"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/progress_rectangle_selected" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="Credit Card Details"
                        android:textColor="@color/topcolor"
                        style="@style/titletext"/>

                </LinearLayout>

            </LinearLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/createprofile"
                android:layout_above="@+id/lblnextscreen"
                android:background="@drawable/curve_box">

                <LinearLayout
                    android:id="@+id/layout1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginVertical="25dp"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <TextView
                        style="@style/edittextheader"
                        android:layout_marginTop="10dp"
                        android:text="@string/card_number" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="10">

                        <EditText
                            android:id="@+id/edt_cardNo"
                            android:layout_width="match_parent"
                            style="@style/edittext"
                            android:layout_marginTop="8dp"
                            android:layout_weight="10"
                            android:inputType="phone"
                            android:maxLength="19"
                            android:hint="@string/enter_card_number"
                            android:focusableInTouchMode="true"
                            android:focusable="true"
                            android:imeOptions="actionDone"/>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:gravity="right"
                            android:visibility="gone"
                            android:layout_height="wrap_content"
                            android:layout_weight="2">

                            <ImageView
                                android:id="@+id/ScancreditCard"
                                android:layout_marginRight="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/scanimg" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            style="@style/edittextheader"
                            android:layout_weight="1"
                            android:gravity="left"
                            android:text="@string/expiry_date" />

                        <TextView
                            android:layout_width="0dp"
                            style="@style/edittextheader"
                            android:layout_marginLeft="17dp"
                            android:layout_weight="1"
                            android:text="@string/cvv_code" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/edt_ExDate"
                            android:layout_width="0dp"
                            style="@style/datetext"
                            android:paddingStart="@dimen/_10sdp"
                            android:background="@drawable/ic_rectangle_box_2152"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:hint="MM/YY"/>

                        <EditText
                            android:id="@+id/edt_CvvNo"
                            android:layout_width="0dp"
                            android:layout_marginTop="8dp"
                            style="@style/edittext"
                            android:background="@drawable/ic_rectangle_box_2152"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:hint="@string/enter_cvv_code"
                            android:maxLength="4"
                            android:inputType="numberPassword"
                            android:focusableInTouchMode="true"
                            android:focusable="true"
                            android:imeOptions="actionDone"/>

                    </LinearLayout>

                    <TextView
                        android:layout_marginTop="10dp"
                        style="@style/edittextheader"
                        android:text="@string/name_on_the_card"/>

                    <EditText
                        android:id="@+id/edt_cardholderName"
                        style="@style/edittext"
                        android:inputType="text"
                        android:hint="@string/enter_card_holder_name"
                        android:focusableInTouchMode="true"
                        android:focusable="true"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@id/edt_streetNameCC"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        style="@style/edittextheader"
                        android:text="@string/street_no_amp_name" />

                    <EditText
                        android:id="@+id/edt_streetNameCC"
                        style="@style/edittext"
                        android:inputType="text"
                        android:hint="@string/street_no_amp_name"
                        android:focusableInTouchMode="true"
                        android:focusable="true"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@id/edtxtUnitNumberCC"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            style="@style/edittextheader"
                            android:layout_weight="1"
                            android:text="@string/unit"/>

                        <TextView
                            android:layout_width="0dp"
                            style="@style/edittextheader"
                            android:layout_marginLeft="17dp"
                            android:layout_weight="1"
                            android:text="@string/pin_zip_code"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <EditText
                            android:id="@+id/edtxtUnitNumberCC"
                            android:layout_width="0dp"
                            android:layout_marginTop="8dp"
                            style="@style/edittext"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:hint="@string/enterunit"
                            android:background="@drawable/ic_rectangle_box_2152"
                            android:inputType="number"
                            android:focusableInTouchMode="true"
                            android:focusable="true"
                            android:imeOptions="actionNext"
                            android:nextFocusLeft="@id/edtPincodeNoCC"/>

                        <EditText
                            android:id="@+id/edtPincodeNoCC"
                            android:layout_width="0dp"
                            android:layout_marginTop="8dp"
                            style="@style/edittext"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:hint="@string/enterpincode"
                            android:background="@drawable/ic_rectangle_box_2152"
                            android:focusableInTouchMode="true"
                            android:focusable="true"
                            android:imeOptions="actionDone"/>
                    </LinearLayout>

                    <TextView
                        style="@style/edittextheader"
                        android:layout_marginTop="10dp"
                        android:text="@string/country"/>

                    <Spinner
                        android:id="@+id/spi_CountryList"
                        style="@style/spinner"
                        android:theme="@style/loginedit"
                        android:entries="@array/items_class_countary">
                    </Spinner>

                    <TextView
                        style="@style/edittextheader"
                        android:layout_marginTop="10dp"
                        android:text="@string/state_province"/>

                    <Spinner
                        android:id="@+id/Spi_StatelistCC"
                        style="@style/spinner"
                        android:theme="@style/loginedit"
                        android:entries="@array/items_class"/>

                    <TextView
                        style="@style/edittextheader"
                        android:layout_marginTop="10dp"
                        android:text="@string/city"/>

                    <EditText
                        android:id="@+id/Edtext_CityCC"
                        style="@style/edittext"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="30dp"
                        android:hint="@string/enter_city"/>
                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <LinearLayout
                android:id="@+id/lblnextscreen"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottommenuheight"
                android:background="@color/bottommenucolor"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtlogin"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="14dp"
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    style="@style/btntext"/>

            </LinearLayout>
        </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>