<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="100"
            android:orientation="vertical">

            <include
                android:id="@+id/header"
                layout="@layout/row_header"/>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/curve_box_light_green_bg"
                android:backgroundTint="@color/b2bheadercurve"
                android:paddingTop="@dimen/_10sdp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                     <include
                         android:id="@+id/car"
                         layout="@layout/do_carimg_3"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginVertical="5dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:weightSum="4">

                            <TextView
                                android:id="@+id/basic"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:paddingVertical="3dp"
                                android:text="@string/basic"
                                android:textColor="@color/txtBlack" />

                            <TextView
                                android:id="@+id/image"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:paddingVertical="3dp"
                                android:text="@string/image"
                                android:textColor="@color/green" />

                            <TextView
                                android:id="@+id/detailed"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:paddingVertical="3dp"
                                android:text="@string/additional"
                                android:textColor="@color/txtBlack" />

                            <TextView
                                android:id="@+id/report"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:paddingVertical="3dp"
                                android:text="@string/rate"
                                android:textColor="@color/txtBlack" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/txtBlack"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:layout_marginStart="15dp"
                            android:text="@string/vehicle_images"
                            android:textSize="@dimen/_12ssp"
                            style="@style/textfont"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/txtBlack"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginBottom="30dp">

                        <include
                            android:id="@+id/images"
                            layout="@layout/all_vehicle_image"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>